Add Minio Upload to project
Signed-off-by: Anonymous <anon@example.com>